Passing Message Info

--- a/firstpro/Templates/register.html
+++ b/firstpro/Templates/register.html
@@ -22,6 +22,13 @@
     
      <input type="submit">
 
+     </form>
+     
+     <div>
+         {% for message in messages %}
+             <h3> {{message}} </h3>
+         {% endfor %}
+     </div>
 </body>
 
 </html>
